bad/method_call_non_class_type_null.example_compiler_output
ERROR
[1mbad/method_call_non_class_type_null.lat:3:6: [1;31merror: [0;1mnon-class type `null` has no methods[m
	null.foo();
	    [1;32m^[m
